# nyaa-rs

./: Cargo.toml  README.md
src/: app.rs  client.rs  main.rs  model.rs  theme.rs  tui.rs
