[package]
name = "nyaa-rs"
version = "0.1.0"
edition = "2024"
authors = ["gh/offs"]
description = "a lightweight tui app to search nyaa.si"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.25.0"
anyhow = "1.0.100"
open = "5.3.3"
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
