[package]
name = "nyaa-rs"
version = "0.1.0"
edition = "2024"
authors = ["gh/offs"]
description = "a lightweight tui app to search nyaa.si"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
directories = "6.0"
open = "5.3"
ratatui = "0.30"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
